# gcp-vertex-rag-blueprint

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE_DECISIONS.md  PROJECT_SCOPE.md  RELEASE_PROCESS.md  ROADMAP_2026.md  RUNBOOK.md  TESTING_STRATEGY.md
docs/assets/: architecture.mmd
examples/: requests.json
src/gcp_vertex_rag_blueprint/: __init__.py  __main__.py  app.py  config.py  generator.py  metrics.py  models.py  pipeline.py  prompting.py  retriever.py
terraform/: README.md
terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/rag_stack/: main.tf  outputs.tf  variables.tf
tests/: test_app.py  test_config.py  test_metrics.py  test_pipeline.py  test_prompting.py  test_retriever_generator.py
